// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render the card component 1`] = `
<div>
  <div
    class="nhsuk-grid-row nhsuk-card-group"
  >
    <div
      class="nhsuk-grid-column-one-third nhsuk-card-group__item"
    >
      <div
        class="nhsuk-card nhsuk-card--clickable"
      >
        <div
          class="nhsuk-card__content"
        >
          <h5
            class="nhsuk-heading-xs nhsuk-card__heading"
          >
            <a
              class="nhsuk-card__link"
              href="#"
            >
              Order a repeat prescription
            </a>
          </h5>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render the card component with a primary variant 1`] = `
<div>
  <div
    class="nhsuk-grid-row nhsuk-card-group"
  >
    <div
      class="nhsuk-grid-column-two-thirds nhsuk-card-group__item"
    >
      <div
        class="nhsuk-card nhsuk-card--clickable nhsuk-card--primary"
      >
        <div
          class="nhsuk-card__content nhsuk-card__content--primary"
        >
          <h2
            class="nhsuk-heading-m nhsuk-card__heading"
          >
            <a
              class="nhsuk-card__link"
              href="#"
            >
              Introduction to care and support
            </a>
          </h2>
          <p
            class="nhsuk-card__description"
          >
            A quick guide for people who have care and support needs and their carers
          </p>
          <svg
            aria-hidden="true"
            class="nhsuk-icon nhsuk-icon__chevron-right-circle"
            focusable="false"
            height="27"
            width="27"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="13.333"
              cy="13.333"
              fill=""
              r="13.333"
            />
            <g
              data-name="Group 1"
              fill="none"
              stroke="#fff"
              stroke-linecap="round"
              stroke-miterlimit="10"
              stroke-width="2.667"
            >
              <path
                d="M15.438 13l-3.771 3.771"
              />
              <path
                d="M11.667 9.229L15.438 13"
                data-name="Path"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render the card component with a secondary variant 1`] = `
<div>
  <div
    class="nhsuk-grid-row nhsuk-card-group"
  >
    <div
      class="nhsuk-grid-column-two-thirds nhsuk-card-group__item"
    >
      <div
        class="nhsuk-card nhsuk-card--clickable nhsuk-card--secondary"
      >
        <div
          class="nhsuk-card__content nhsuk-card__content--secondary"
        >
          <h2
            class="nhsuk-heading-m nhsuk-card__heading"
          >
            <a
              class="nhsuk-card__link"
              href="#"
            >
              Urgent and emergency care services
            </a>
          </h2>
          <p
            class="nhsuk-card__description"
          >
            Services the NHS provides if you need urgent or emergency medical help
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render the card component with an image 1`] = `
<div>
  <div
    class="nhsuk-grid-row nhsuk-card-group"
  >
    <div
      class="nhsuk-grid-column-one-third nhsuk-card-group__item"
    >
      <div
        class="nhsuk-card nhsuk-card--clickable"
      >
        <img
          alt="A person wearing a face mask"
          class="nhsuk-card__img"
          src="https://assets.nhs.uk/prod/images/A_0218_exercise-main_FKW1X7.width-690.jpg"
        />
        <div
          class="nhsuk-card__content"
        >
          <h2
            class="nhsuk-heading-m nhsuk-card__heading"
          >
            <a
              class="nhsuk-card__link"
              href="#"
            >
              Exercise
            </a>
          </h2>
          <p
            class="nhsuk-card__description"
          >
            Programmes, workouts and tips to get you moving and improve your fitness and wellbeing
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
